# tech_challenge_2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
configs/: params.yaml
data/: raw_data.dvc
data/processed_data/: .gitignore  metricas_avaliacao.json  metricas_treino.json
docs/: MODEL_CARD.md  RELATORIO.md  TASKS.md
docs/evidencias/: diagnostico_baseline_etapa3.md  instalacao_limpa_etapa2.md
docs/postman/: api-recomendacao.postman_collection.json
models/: .gitignore  comparacao_modelos.json  recomendacao_movielens.ipynb
scripts/: validate_env.py
src/tech_challenge_recomendacao/: configuracoes.py  parametros.py
src/tech_challenge_recomendacao/api/: aplicacao.py  dependencias.py  erros.py  esquemas.py  rotas.py  servico_recomendacao.py  servico_treino.py
src/tech_challenge_recomendacao/avaliacao/: __init__.py  avaliar.py  baselines_sklearn.py  metricas_ranking.py
src/tech_challenge_recomendacao/dados/: __init__.py  catalogo_filmes.py  engenharia_features.py  mapeamento_ids.py  preprocessamento.py
src/tech_challenge_recomendacao/modelos/: __init__.py  base.py  capacidades.py  checkpoint.py  fabrica.py  fatoracao_matricial.py  rede_neural.py
src/tech_challenge_recomendacao/treino/: __init__.py  treinar.py
tests/: conftest.py  test_baselines_sklearn.py  test_catalogo_filmes.py  test_checkpoint.py  test_engenharia_features.py  test_mapeamento_ids.py  test_metricas_ranking.py  test_modelos.py  test_parametros.py  test_preprocessamento.py  test_rotas_api.py  test_rotas_treino.py  test_servico_recomendacao.py  test_servico_treino.py
