[project]
name = "tech-challenge-recomendacao"
version = "0.1.0"
description = "Sistema de recomendação de produtos baseado em comportamento de navegação - PosTech Tech Challenge"
authors = [
    { name = "Giovanni de Aguirre Tamanini", email = "giovanni.tnini@gmail.com" },
    { name = "Yan Levi Martins Meira" },
    { name = "Cristiano Lima do Sacramento" },
    { name = "Marcelo Souza" },
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.67.1",
    "mlflow>=3.14.0",
    "numpy>=2.5.1",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
